# ArduPilot_EXIF_Autogen

./: .gitmodules  CMakeLists.txt  README.md
examples/cpp_exiftool/: CMakeLists.txt  exiftool_example.cpp
examples/gphoto2pp/: CMakeLists.txt  gphoto2pp_example.cpp
examples/mavlink/: CMakeLists.txt  check_digicam.cpp  mavlink_lookup.cpp  mavlink_simple.cpp
examples/serial/: CMakeLists.txt  serial_example.cc  serial_example.cpp
lib/cpp_exiftool/: README
lib/cpp_exiftool/example/: example1  example1.cpp  example2  example2.cpp  example3  example3.cpp  example4  example4.cpp  example5  example5.cpp
lib/cpp_exiftool/html/: index.html
lib/cpp_exiftool/inc/: ExifTool.h  ExifToolPipe.h  TagInfo.h
lib/cpp_exiftool/src/: ExifTool.cpp  ExifToolPipe.cpp  TagInfo.cpp
src/: main.cpp
